@@ -1,6 +1,7 @@
 1.6.2:
 -Fix: Skip files that ought to be skipped instead of generating a new file name
 -Fix: Make saving custom profiles work again
+-Fix: Don't mix up the output directoy history for metadata and normal mode
 
 1.6.1:
 -Fix: Don't try to restore the file list when calling soundKonverter while it is running
